update splash section on mobile to not have fixed attachment

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -762,6 +762,7 @@ section:nth-child(6) {
 
   #splash {
     background-position: 75%;
+    background-attachment: scroll;
   }
 
   #quote {
